# luci-app-overwatch

./: .gitignore  Cargo.toml
files/etc/config/: overwatch
openwrt/luci-app-overwatch/: Makefile
openwrt/luci-app-overwatch/htdocs/luci-static/resources/view/overwatch/: dashboard.js  dns.js  history.js  overwatch.css
openwrt/luci-app-overwatch/po/templates/: overwatch.pot
openwrt/luci-app-overwatch/po/zh_Hans/: overwatch.po
openwrt/luci-app-overwatch/root/usr/libexec/rpcd/: overwatch
openwrt/luci-app-overwatch/root/usr/share/luci/menu.d/: luci-app-overwatch.json
openwrt/luci-app-overwatch/root/usr/share/rpcd/acl.d/: luci-app-overwatch.json
openwrt/overwatchd/: Makefile
openwrt/overwatchd/files/: overwatchd.init
src/: account.rs  api.rs  classify.rs  config.rs  conntrack.rs  control.rs  db.rs  dns_capture.rs  dns_parse.rs  downsample.rs  flow.rs  history.rs  lib.rs  main.rs  names.rs  probe.rs  recorder.rs  ring.rs  sample.rs  server.rs  snapshot.rs
tests/fixtures/: arp.txt  dhcp.leases  nf_conntrack.txt
