[workspace]
members = ["."]

[package]
name = "overwatchd"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "overwatchd"
path = "src/lib.rs"

[[bin]]
name = "overwatchd"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
